// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineGraph > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col-reverse sm:flex-col"
  >
    <svg
      class="h-5 w-full"
      data-testid="LineGraph__svg"
    >
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-success-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__0"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="42"
          x="0"
          y="0"
        />
        <rect
          class="fill-current text-theme-success-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="42"
          x="0"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-warning-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__1"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="22"
          x="50"
          y="0"
        />
        <rect
          class="fill-current text-theme-warning-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="22"
          x="50"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-info-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__2"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="20"
          x="80"
          y="0"
        />
        <rect
          class="fill-current text-theme-info-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="20"
          x="80"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LineGraph > should render as empty 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col-reverse sm:flex-col"
  >
    <svg
      class="h-5 w-full"
      data-testid="LineGraph__svg"
    >
      <rect
        class="fill-current text-theme-secondary-300 dark:text-theme-secondary-800"
        data-testid="LineGraph__empty"
        height="8"
        rx="4"
        width="100"
        x="0"
        y="8"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`LineGraph > should render legend 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col-reverse sm:flex-col"
  >
    <div
      class="mt-3 flex justify-center sm:mb-1 sm:mt-0 sm:justify-start lg:justify-end"
      data-testid="LineGraph__legend"
    >
      <ul>
        <li>
          item 1 value: 50
        </li>
        <li>
          item 2 value: 30
        </li>
        <li>
          item 3 value: 20
        </li>
      </ul>
    </div>
    <svg
      class="h-5 w-full"
      data-testid="LineGraph__svg"
    >
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-success-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__0"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="42"
          x="0"
          y="0"
        />
        <rect
          class="fill-current text-theme-success-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="42"
          x="0"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-warning-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__1"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="22"
          x="50"
          y="0"
        />
        <rect
          class="fill-current text-theme-warning-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="22"
          x="50"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
      <g
        data-testid="LineGraph__item"
      >
        <rect
          class="fill-current text-theme-info-600"
          data-testid="LineGraph__item-hover-area"
          height="20"
          id="rectHoverArea__2"
          opacity="0"
          pointer-events="visiblePainted"
          rx="0"
          width="20"
          x="80"
          y="0"
        />
        <rect
          class="fill-current text-theme-info-600"
          height="8"
          pointer-events="none"
          rx="4"
          width="20"
          x="80"
          y="8"
        >
          <animate
            attributeName="height"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="16"
          />
          <animate
            attributeName="height"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="16"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="4"
            to="8"
          />
          <animate
            attributeName="rx"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="8"
            to="4"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="8"
            to="0"
          />
          <animate
            attributeName="y"
            begin="rectHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="0"
            to="8"
          />
        </rect>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;
